[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voidnote"
version = "0.3.0"
description = "Official SDK for VoidNote — zero-knowledge self-destructing notes and live encrypted streams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["voidnote", "secrets", "encryption", "zero-knowledge", "one-time"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[project.urls]
Homepage = "https://voidnote.net"
Repository = "https://github.com/quantum-encoding/voidnote-python"
Documentation = "https://voidnote.net/docs"

[tool.hatch.build.targets.wheel]
packages = ["voidnote"]
